--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.29.6",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
